crates/syntax/tests/snapshots/parser__parser_inner doc comment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..42,
        statements: StatementList {
            span: 0..42,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                (
                    InnerDocComment(
                        Comment {
                            span: 0..42,
                            inner: SingleLine(
                                [
                                    "//! Doc comment1",
                                    "//! Doc comment2",
                                ],
                            ),
                        },
                    ),
                    [],
                ),
            ],
            tail: None,
        },
    },
)
