crates/syntax/tests/snapshots/parser__parser_int overflow.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..19,
        statements: StatementList {
            span: 0..19,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..19,
                    extras: ItemExtras {
                        leading: [],
                        trailing: [],
                    },
                    attributes: [],
                    expression: Literal(
                        Literal {
                            span: 0..19,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            literal: Error(
                                LiteralError {
                                    span: 0..19,
                                    kind: Int(
                                        ParseIntError {
                                            kind: PosOverflow,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    },
)
