crates/syntax/tests/snapshots/parser__parser_leading dot.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..2,
        statements: StatementList {
            span: 0..2,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..2,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attributes: [],
                        expression: Literal(
                            Literal {
                                span: 0..2,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                literal: Float(
                                    FloatLiteral {
                                        span: 0..2,
                                        value: 0.1,
                                        raw: ".1",
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
